# eqOgreBullet

./: CMakeLists.txt  README.md
assets/materials/: Colors.material
bullet/headers/: bulletphysics.h  bulletrigidbody.h
bullet/src/: bulletphysics.cpp  bulletrigidbody.cpp
datastructures/headers/: actor.h  bulletactor.h  diffactor.h  ogreactor.h  vec3.h  vec4.h
equalizer/headers/: channel.h  config.h  framedata.h  initdata.h  node.h  nodefactory.h  pipe.h  serializablediffactor.h  serializableogreactor.h  window.h
equalizer/src/: channel.cpp  config.cpp  framedata.cpp  initdata.cpp  node.cpp  nodefactory.cpp  pipe.cpp  serializablediffactor.cpp  serializableogreactor.cpp  window.cpp
main/: eqogrebullet.cpp  eqogrebullet.h
ogre/headers/: ogreapplication.h
ogre/src/: ogreapplication.cpp
